src/objects/ItemCaso__c.object
<CustomObject>
    <fields>
        <fullName>Caso__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Caso</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Produtos do Caso</relationshipLabel>
        <relationshipName>Itens_do_Caso</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CodigoIdentificador__c</fullName>
        <label>Codigo identificador</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Pedido__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Pedido</label>
        <referenceTo>Order_Item__c</referenceTo>
        <relationshipLabel>Itens do Caso</relationshipLabel>
        <relationshipName>Itens_do_Caso</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nome_do_Produto__c</fullName>
        <formula>Item_Pedido__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nome do Produto</label>
        <type>Text</type>
    </fields>
    <label>ItemCaso</label>
    <listViews>
        <fullName>Financeiro_Contas_a_Receber_Samsung_ItemCaso</fullName>
        <filterScope>Queue</filterScope>
        <label>Financeiro – Contas a Receber Samsung</label>
        <queue>Financeiro_Contas_a_Receber_Samsung</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Processamento_Refaturamento_Samsung_ItemCaso</fullName>
        <filterScope>Queue</filterScope>
        <label>Processamento Refaturamento Samsung</label>
        <queue>Processamento_Refaturamento_Samsung</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Processamento_Samsung_ItemCaso</fullName>
        <filterScope>Queue</filterScope>
        <label>Processamento Samsung</label>
        <queue>Processamento_Samsung</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>IC-{0000000000}</displayFormat>
        <label>Nome de ItemCaso</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itens do Caso</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>